# mc-panel-agent

./: .env.example  .gitignore  README.md  chat_ui.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
minecraft_agent/: __init__.py  config.py  main.py  pelican_client.py
minecraft_agent/tools/: __init__.py  custom_api_tool.py  list_downloads_tool.py  server_tool.py  upload_file_tool.py  wait_tool.py  web_tool.py
minecraft_agent/utils/: logging.py
pelicanapidocs/: pelican_panel_api_reference.md
